<resources>
    <string name="app_name">MedicSpot</string>
    <string name="copyright">Copyright &#169; 2022 MedicSpot</string>
    <string name="member_list">DEVELOPER</string>
    <string name="member1">AIMAN HARITH BIN ZAHARUDIN (202088458)</string>
    <string name="instruction_title"> INSTRUCTION GUIDE</string>
    <string name="instruction1"> MedicSpot Application is an application that can track where are the medical place located for example hospital,clinic and many more. This application can track all the medical place in peninsular area of Malaysia.
    Firstly, user may click the "Open Map" button. Second, user may view the map and lastly, user can Choose the marker where the user want to go and use it to got the direction.</string>
    <string name="hyperlink">Please visit <a href="https://github.com/aimanharith23/MyZakatGold-assignment-aimanharith.git">github.com</a> </string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>